# pdf-extractext

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  SKILL.md  docker-compose.yml  main.py  pyproject.toml
infrastructure/mongodb/: .env-example  docker-compose.yml
infrastructure/traefik/: docker-compose.yml
infrastructure/traefik/config/: config.yml  traefik.yml
scripts/: build.sh
services/validation-service/: Dockerfile  docker-compose.yml  main.py  requirements.txt
services/validation-service/src/: pdf_validator.py
src/: __init__.py  config.py  main.py
src/api/: __init__.py  router.py
src/api/v1/: __init__.py
src/application/: __init__.py
src/application/dtos/: __init__.py  item_dto.py
src/application/mappers/: __init__.py  item_mapper.py
src/application/ports/: __init__.py  text_extractor_port.py
src/application/services/: __init__.py  item_service.py  pdf_text_extractor.py  pdf_validator.py
src/application/use_cases/: __init__.py  create_item.py  delete_document.py  get_document.py  list_documents.py  save_document.py  update_document.py  upload_document.py
src/domain/: __init__.py  exceptions.py
src/domain/entities/: __init__.py  document.py
src/domain/exceptions/: base.py  document_errors.py
src/domain/repositories/: __init__.py  document_repository.py  item_repository.py
src/domain/value_objects/: __init__.py
src/infrastructure/: __init__.py
src/infrastructure/adapters/: __init__.py  mongodb_connection.py  pypdf_text_extractor.py
src/infrastructure/config/: __init__.py  (+2 more)
src/interface_adapters/: __init__.py
src/models/: __init__.py  item.py
src/repositories/: __init__.py  providers.py
src/services/: __init__.py
tests/: __init__.py
tests/integration/: test_documents_api.py  test_health_endpoint.py  test_items_api.py
tests/unit/: test_document.py  test_item_service.py  test_pdf_text_extractor.py  test_pdf_validator.py  test_save_document_use_case.py
(+33 files in other folders)
